--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,6 +20,22 @@ body,
 #root {
   height: 100%;
 }
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #3FC045;
+  border-radius: 12px;
+}
+
 
 * {
   margin: 0px;
@@ -65,6 +81,23 @@ body,
   cursor: pointer;
   text-decoration: none;
   margin-bottom: 20px;
+}
+.back-link-title {
+  display: flex;
+  align-items: center;
+  margin-bottom: 24px;
+  width: 100%;
+}
+.back-link-title .back-link {
+  margin-bottom: 0px;
+}
+.back-link-title .title {
+  font-size: 18px;
+  font-weight: bold;
+ 
+  color: #212226;
+  margin: 0px;
+   margin-left: 33%;
 }
 .product-detail .title {
 
@@ -229,6 +262,12 @@ line-height: 1.1;
   color: var(--bs-body-color);
   
 }
+.medium-title {
+  font-size: 16px;
+  font-weight: 700;
+  color: var(--bs-body-color);
+  
+}
 .body-text {
   font-size: 12px;
   font-weight: 400;
@@ -236,6 +275,13 @@ line-height: 1.1;
   color: #646568;
 
 }
+.body-text-med {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.3;
+  color: #646568;
+}
+
 .product-detail .product-info {
   font-weight: 500;
   color: var(--bs-body-color);
@@ -448,4 +494,324 @@ color: #212121;
   align-items: center;
   background-color: #191A26;
   cursor: pointer;
+}
+.order-page .orders-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.order-page {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+/* .order-page .top {
+  height: calc(94vh - 48px);
+  overflow-y: auto;
+  padding-right: 10px;
+} */
+.order-page .action-button {
+  width: 100%;
+  height: 48px;
+  background-color: #3FC045;
+  font-size: 14px;
+  border-radius: 67px;
+  color: white;
+  font-size: 16px;
+  font-weight: 600;
+  text-align: center;
+  border: none;
+  cursor: pointer;
+  padding: 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.order-page .orders-top .text {
+  font-size: 16px;
+  color: #212226;
+  margin: 0px;
+  font-weight: 600;
+}
+.order-page .orders-top .action {
+  color: #3FC045;
+  font-weight: 600;
+  font-size: 14px;
+  cursor: pointer;
+}
+.order-page .order-item {
+  padding: 12px;
+  border: 1px solid #EAEDF3;
+  border-radius: 8px;
+  margin-bottom: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.order-page .order-item .left {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+.order-page .order-item .left .image {
+  width: 72px;
+  height: 72px;
+  border-radius: 8px;
+}
+.order-page .order-item .left .image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  object-fit: cover;
+}
+.order-page .order-item .left .data .title {
+  font-size: 14px;
+  font-weight: 600;
+  color: #212226;
+  line-height: 1.2;
+  margin-bottom: 4px;
+}
+.order-page .order-item .left .data .cusine {
+  font-size: 12px;
+  font-weight: 500;
+  color: #212226;
+  line-height: 1.2;
+  margin-bottom: 4px;
+}
+.order-page .order-item .left .data .price {
+  font-size: 14px;
+  font-weight: 600;
+  color: #3FC045;
+  line-height: 1.2;
+  margin-bottom: 0px;
+}
+.order-page .order-item .counter {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+}
+.order-page .order-item .counter .action {
+  height: 20px;
+  width: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 6px;
+  cursor: pointer;
+  user-select: none;
+  border: none;
+}
+.order-page .order-item .counter .count {
+  height: 24px;
+  font-size: 14px;
+  font-weight: bold;
+  user-select: none;
+  cursor: text;
+  color: #212226;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.order-page .order-item .counter .action.inc {
+  background-color: #3FC045;
+}
+.order-page .order-item .counter .action.dec {
+  background-color: #ecf9ec;
+ 
+}
+.order-page .order-item .counter .action:focus {
+  outline: none;
+  border: none;
+}
+.date-selection {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 24px;
+}
+.date-selection .left {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+
+}
+.date-selection .left .data .title {
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 1.2;
+  color: #646568;
+  margin-bottom: 6px;
+}
+.date-selection .left .data .date {
+  font-size: 15px;
+  font-weight: 600;
+  line-height: 1.2;
+  color: var(--bs-body-color);
+  margin-bottom: 0px;
+}
+.date-selection .action {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border: none;
+}
+.date-selection .action img {
+  width: 20px;
+  height: auto;
+}
+.date-selection .action:focus {
+  outline: none;
+  border: none;
+}
+.map-container {
+  height: 110px;
+  width: 100%;
+  border-radius: 12px;
+  margin-bottom: 18px;
+}
+.map-container iframe,.map-container img {
+  width: 100%;
+  object-fit: cover;
+  height: 100%;
+  border-radius: 12px;
+}
+.add-address {
+  background-color: transparent;
+  border: none;
+  font-size: 12px;
+  font-weight: 400;
+  color: #3FC045;
+  display: flex;
+  gap: 5px;
+  align-items: center;
+}
+.add-address:focus {
+    outline: none;
+  border: none;
+}
+.payment-method {
+  border-radius: 12px;
+  margin-bottom: 16px;
+  padding: 16px;
+  border: 1px solid #EAEDF3;
+}
+.payment-method .item-flex {
+  display: flex;
+  line-height: 1.4;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 12px;
+  color: #646568;
+  font-size: 16px;
+  font-weight: 600;
+}
+.payment-method .item-flex.bold {
+  font-weight: bold;
+  color: var(--bs-body-color);
+}
+.other-payment-fee {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  align-items: center;
+}
+.other-payment-fee .left {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  font-size: 14px;
+  font-weight: 600;
+  color: #646568;
+}
+.other-payment-fee .left .icon {
+  height: 20px;
+  width: 20px;
+  border: 1px solid #191A26;
+  display: flex;
+  justify-content: center;
+  border-radius: 50%;
+  align-items: center;
+  font-size: 14px;
+  font-weight: bold;
+  color: var(--bs-body-color);
+}
+.other-payment-fee .input {
+  height: 24px;
+  width: 24px;
+  border-radius: 50%;
+  appearance: none; /* removes default browser styling */
+  background-color: transparent;
+  border: 1px solid #3FC045;
+  padding: 4px;
+  cursor: pointer;
+  position: relative;
+}
+.other-payment-fee .input::before {
+  height: 18px;
+  width: 18px;
+  background-color: transparent;
+  left: 2px;
+  top: 2px;
+  position: absolute;
+  content: '';
+  border-radius: 50%;
+  z-index: 1;
+}
+.other-payment-fee .input:checked::before {
+  background-color: #3FC045;
+}
+.other-payments-wrapper {
+  padding: 16px;
+  border-radius: 12px;
+  margin-bottom: 20px;
+  border: 1px solid #EAEDF3;
+}
+.other-payments-wrapper .title {
+  font-size: 14px;
+  font-weight: 600;
+  color: #3FC045;
+  margin-bottom: 16px;
+}
+.other-payments-wrapper .item-flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 12px;
+}
+.other-payments-wrapper .item-flex .left .text {
+  font-size: 12px;
+  color: var(--bs-body-color);
+  margin-bottom: 0px;
+   line-height: 1;
+  font-weight: 600;
+}
+.other-payments-wrapper .item-flex .left .email {
+  font-size: 12px;
+  color: var(--bs-body-color);
+  text-decoration: underline;
+  margin-bottom: 0px;
+  line-height: 1;
+  font-weight: 600;
+}
+.other-payments-wrapper .item-flex .copy {
+  cursor: pointer;
+  font-size: 12px;
+  width: max-content;
+  background-color: #3FC045;
+  color: white;
+  display: flex;
+  padding: 4px 8px;
+  border-radius: 6px;
+  align-items: center;
+  gap: 5px;
+}
+.other-payments-wrapper .item-flex .copy svg {
+  width: 12px;
 }
