--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -97,7 +97,7 @@ body,
  
   color: #212226;
   margin: 0px;
-   margin-left: 33%;
+   margin-left: 12px;
 }
 .product-detail .title {
 
@@ -512,7 +512,7 @@ color: #212121;
   overflow-y: auto;
   padding-right: 10px;
 } */
-.order-page .action-button {
+  .action-button {
   width: 100%;
   height: 48px;
   background-color: #3FC045;
@@ -814,4 +814,129 @@ color: #212121;
 }
 .other-payments-wrapper .item-flex .copy svg {
   width: 12px;
+}
+.menu-listing .menu-list {
+  padding: 12px;
+  margin-bottom: 16px;
+  border-radius: 12px;
+    border: 1px solid #EAEDF3;
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+.menu-listing .menu-list .left {
+  flex: 1 1 60%;
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+.menu-listing .menu-list .left .image img {
+  width: 70px;
+  height: 80px;
+  border-radius: 12px;
+  object-fit: cover;
+}
+.menu-listing .menu-list .left .data .title {
+  font-size: 12px;
+  font-weight: bold;
+  margin-bottom: 4px;
+  color: var(--bs-body-color);
+}
+.menu-listing .menu-list .left .data .text {
+  font-size: 11px;
+  font-weight: 400;
+  margin-bottom: 4px;
+  color: #7E8CA0;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.menu-listing .menu-list .left .data .price{
+  font-size: 12px;
+  font-weight: bold;
+  color:#3FC045;
+}
+.menu-listing .menu-list .quantity-warpper {
+  flex: 0 0 auto;
+  display: initial;
+ 
+  
+}
+.menu-listing .menu-list .quantity-warpper .icon {
+  width: 24px;
+  height: 24px;
+  background-color: #F8F8F8;
+  border-radius: 50%;
+  flex-shrink: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.menu-listing .menu-list .quantity-warpper .icon img {
+  width: 12px;
+}
+.menu-listing .menu-list .quantity-warpper .bottom {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  justify-content: space-between;
+}
+.menu-listing .menu-list .quantity-warpper .bottom .time {
+     font-size: 13px;
+  font-weight: bold;
+ 
+  color: var(--bs-body-color);
+}
+.menu-listing .menu-list .quantity-warpper .title {
+    font-size: 13px;
+  font-weight: bold;
+  margin-bottom: 4px;
+  color: var(--bs-body-color);
+}
+.menu-listing .menu-list .quantity-warpper .right .count {
+  width: 24px;
+  height: 24px;
+  display: flex;
+  font-size: 8px;
+ 
+}
+.menu-listing .menu-list .quantity-warpper .right .counter {
+  height: 26px;
+ 
+
+  padding: 3px;
+  padding-right: 3px;
+}
+.menu-listing .menu-list .quantity-warpper .right .counter .button {
+  
+  width: 24px;
+  height: 24px;
+ 
+}
+.menu-listing .menu-list .quantity-warpper .right .counter .button svg {
+  width: 12px !important;
+  height: 12px !important;
+}
+.scanner-bottom {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.scanner-bottom .text {
+  font-size: 12px;
+  font-weight: 400;
+font-style: italic;
+color: #3FC045;
+margin-bottom: 0px;
+}
+.scanner-bottom .qr {
+  height: 60px;
+  width: 60px;
+  border-radius: 12px;
+  flex-shrink: 0;
+  border: 1px solid #EAEDF3;
 }
