--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -281,7 +281,56 @@ line-height: 1.1;
   line-height: 1.3;
   color: #646568;
 }
-
+.upload-wrapper .upload {
+  position: relative;
+  padding: 8px 50px;
+  font-size: 14px;
+  background-color: #3FC045;
+  border-radius: 67px;
+  margin: 16px auto;
+  width: max-content;
+  cursor: pointer;
+  color: white;
+  font-weight: bold;
+}
+.success-image-wrapper {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
+.success-image-wrapper img {
+  display: block;
+  margin: auto;
+  margin-bottom: 16px;
+  width: 172px;
+  height: auto;
+}
+.success-image-wrapper .title {
+  font-size: 22px;
+  font-weight: 700;
+  color: var(--bs-body-color);
+  line-height: 1.5;
+  text-align: center;
+}
+.success-image-wrapper .text {
+  font-size: 14px;
+  font-weight: 400;
+  color: #646568;
+  text-align: center;
+  line-height: 1.5;
+}
+.upload-wrapper .upload input {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  opacity: 0;
+  left: 0;
+  top: 0;
+  z-index: 999;
+}
 .product-detail .product-info {
   font-weight: 500;
   color: var(--bs-body-color);
@@ -521,6 +570,7 @@ color: #212121;
   color: white;
   font-size: 16px;
   font-weight: 600;
+  text-decoration: none;
   text-align: center;
   border: none;
   cursor: pointer;
