--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -455,6 +455,9 @@ body,
   letter-spacing: 0.2px;
   color: #212121;
 }
+.add-to-cart-action.mt-2 {
+  margin-top: 12px;
+}
 .add-to-cart-action {
   display: flex;
   align-items: center;
@@ -467,19 +470,19 @@ body,
 }
 .add-to-cart-action .button {
   flex: 1 1 auto;
-  height: 56px;
+  height: 42px;
   border-radius: 67px;
   text-align: center;
   font-size: 14px;
   font-weight: 700;
   color: #ffffff;
-  padding: 16px;
+  padding: 8px 16px;
   background-color: #3fc045;
   border: none;
 }
 .add-to-cart-action .icon {
-  height: 56px;
-  width: 56px;
+  height: 42px;
+  width: 42px;
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -506,7 +509,7 @@ body,
 } */
 .action-button {
   width: 100%;
-  height: 48px;
+  height: 42px;
   background-color: #3fc045;
   font-size: 14px;
   border-radius: 67px;
@@ -1112,7 +1115,11 @@ body,
   flex-shrink: 0;
   border: 1px solid #eaedf3;
 }
-
+.scanner-bottom .qr img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 /* Payment Page Order Items Section */
 .order-items-section {
   background: #ffffff;
